<resources>
    <string name="app_name">mWithU</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="facebook_login">Login with Facebook</string>
    <string name="google_login">Login with Google</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_account">New User? Create Account here.</string>
    <string name="login_button">Login Button</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">383629958778790</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb383629958778790</string>
</resources>
